# persona-continuum

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONTINUATION_ENGINE.md  DEVELOPMENT.md  DOMAIN_MODEL.md  MCP_TOOLS.md  PERSONA_SCHEMA.md  PREFLIGHT_ACCEPTANCE.md  PRIVACY_AND_CONSENT.md  REFERENCES.md  ROADMAP.md  SKILL_WORKFLOW.md
examples/alex-chen/: README.md
scripts/: __init__.py  build_source_package.py  preflight_acceptance.py
skills/persona-continuum/: SKILL.md
src/persona_continuum/: __init__.py  config.py
src/persona_continuum/application/: _utils.py  compilation_service.py  compiled_context_service.py  container.py  continuation_service.py  evaluation_service.py  memory_service.py  persona_service.py  room_service.py  session_service.py
src/persona_continuum/cli/: app.py
src/persona_continuum/compiler/: artifact_merger.py  confidence.py  schemas.py  source_planner.py  workflow.py
src/persona_continuum/continuation/: branches.py  divergence.py  event_stream.py  world_state.py
src/persona_continuum/domain/: affect.py  continuation.py  evidence.py  identity.py  memory.py  motivation.py  persona.py  (+2 more)
tests/: conftest.py
tests/e2e/: test_alex_chen_flow.py
tests/integration/: test_persona_flow.py  test_preflight_acceptance.py  test_v11_mcp_eval_concurrency.py  test_v11_rc2_release_blockers.py  test_v11_rc3_regressions.py  test_v11_rc4_release_blockers.py  test_v11_rc5_branch_runtime_atomicity.py  test_v11_regressions.py  test_v11_release_package.py
tests/unit/: test_runtime_engines.py  test_storage.py
(+27 files in other folders)
