[project]
name = "persona-continuum"
version = "0.1.0"
description = "Local-first digital persona runtime, compiler, MCP server, and CLI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Persona Continuum Contributors" }]
dependencies = [
  "mcp[cli]>=1.27,<2",
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "PyYAML>=6.0,<7",
  "python-docx>=1.1,<2",
  "pypdf>=4.0,<6",
  "beautifulsoup4>=4.12,<5",
]

[project.scripts]
persona-continuum = "persona_continuum.cli.app:main"
persona-continuum-mcp = "persona_continuum.mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "types-PyYAML>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_continuum"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["persona_continuum"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
